# langchain_Rag_project

./: 01_llm.ipynb  02_prompttemplate.ipynb  03_structured_output.ipynb  04_Output_parser.ipynb  05_Chains.ipynb  06_Document_loader.ipynb  LICENSE  README.md  main.py  pyproject.toml  text.txt
