[project]
name = "langchain-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "openai>=2.38.0",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
]
